--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,11 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+
+
+
+
+# Configs with auth data
+InstaMonitor/appsettings.Development.json
+InstaMonitor/appsettings.Production.json
