save execution results and generate reports

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -3,10 +3,9 @@
     "UserName": "",
     "Password": ""
   },
+  "ConnectionStrings": {
+    "LiteDB": "Filename=./data/database.db;Password=VeryStrongPassword"
+  },
   "MonitorItems": [
-    //{
-    //  "UserName": "molokmax",
-    //  "Followers": true
-    //}
   ]
 }
