--- a/src/NLog.config
+++ b/src/NLog.config
@@ -15,7 +15,7 @@
       concurrentWrites="true"
     />
     <target name="console" xsi:type="Console"  
-      layout="${longdate} ${level} ${message} ${onexception:${newline}${exception:format=tostring}} ${newline}"/>
+      layout="${longdate} ${level} ${message} ${onexception:${newline}${exception:format=tostring}}"/>
     <target name="commonfile" xsi:type="File"
       layout="${longdate}|${level}|${message} ${onexception:${newline}${exception:format=tostring}} ${newline}----------"
       fileName="logs/common_${shortdate}.log"
