--- a/.gitignore
+++ b/.gitignore
@@ -354,7 +354,7 @@ MigrationBackup/
 
 
 # Configs with auth data
-src/appsettings.Development.json
-src/appsettings.Production.json
-src/data
+src/**/appsettings.Development.json
+src/**/appsettings.Production.json
+src/**/data/*.db
 tests/InstaMonitor.Tests/appsettings.Test.json
